syntax = "proto3";

package shoppingcart;

option go_package = "./src/pb/shoppingcart";

message AddProduct {
    int32 productId =1;
    int32 quantity = 2;
    double priceUnit = 3;
}

message ShoppingCartTotal {
    int32 quantityItems = 1;
    double priceTotal = 2;
}

service ShoppingCartService {
    rpc AddItem(stream AddProduct) returns (stream ShoppingCartTotal);
}